# unit_test_framework

./: .gitignore  CMakeLists.txt  README.md  download_file_from_github.ps1
Source/: CMakeLists.txt  unit_test_framework.h
Tests/: CMakeLists.txt  array_compare_error.cpp  char_array.cpp  end_to_end_test.cpp  missing_overload_error.cpp  pairs_and_sequences.cpp  sequence_equal.cpp  size_t_and_int.cpp  string_equal.cpp  test_early_exit.cpp  test_name_conflict_file_with_tests.cpp  test_special_asserts.cpp
